new implementation of update

--- a/public_html/inputForm.html
+++ b/public_html/inputForm.html
@@ -28,9 +28,9 @@
             <input type="text" name="value" size="24">new value<br>
             <input type="submit" id="userSubmit" name="userSubmit">
             <select name="attribute">
-                <option value="first" name="first">First</option>
-                <option value="middle" name="middle">Middle</option>
-                <option value="last" name="last">Last</option>
+                <option value="f_name" name="first">First</option>
+                <option value="m_name" name="middle">Middle</option>
+                <option value="l_name" name="last">Last</option>
             </select> attribute
         </form>
     </div>
