--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,7 +21,7 @@
     <br>
 
     <button onclick="window.location.href='inputForm.html'">Add/Update Passengers</button>
-    <button onclick="window.location.href='showPassenger.php'">Show Passengers</button>
+    <button onclick="window.location.href='showPassengers.php'">Show Passengers</button>
 
 
 </body>
