--- a/public_html/inputForm.html
+++ b/public_html/inputForm.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="default.css">
     <title>Passengers</title>
 </head>
+
 <body>
+
+    <div class="header">
+        <h1>Add / Update Passengers</h1>
+    </div>
+
     <div id="addPass">
         <form id="addInputField" action="createPassenger.php" method="POST">
             <label for="userInput">Add New Passenger:</label><br>
@@ -35,4 +43,5 @@
         </form>
     </div>
 </body>
+
 </html>
