--- a/public_html/projectProposal.html
+++ b/public_html/projectProposal.html
@@ -19,5 +19,6 @@
     <br>9. Block chain mining, funding the accounts of the creators
     <br>10.Live chat functionality???
     <br>Skyler, Andrew, Brian, Connor
+    <img src = "RelationalSchema.png" >
 </body>
 </html>
