--- a/public_html/projectProposal.html
+++ b/public_html/projectProposal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Proposal</title>
     STOCK PROJECT
 </head>
 <body>
@@ -18,7 +18,13 @@
     <br>8. Separate forum section for users to discuss stocks and things, will have a profanity filter as well as a feature to report comments
     <br>9. Block chain mining, funding the accounts of the creators
     <br>10.Live chat functionality???
+
+    <h1>Schema:<br></h1>
     <img src = "RelationalSchema.png" >
+    
+    <h1>Proposed Schedule</h1>
+    <img src="Schedule.png">
+    
     <br>Skyler, Andrew, Brian, Connor
 </body>
 </html>
