--- a/public_html/projectProposal.html
+++ b/public_html/projectProposal.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <header>
+    <div class="header">
         <h1>Stock Project Proposal</h1>
-    </header>
+    </div>
 
     <div class="content">
 
